; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/partitioning/extr_partprune.c_get_steps_using_prefix.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/partitioning/extr_partprune.c_get_steps_using_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32, i32*, i32, i32, i32*, i32*)* @get_steps_using_prefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_steps_using_prefix(i32* %0, i32 %1, i32 %2, i32* %3, i32 %4, i32 %5, i32* %6, i32* %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  store i32* %0, i32** %10, align 8
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32* %3, i32** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32* %6, i32** %16, align 8
  store i32* %7, i32** %17, align 8
  %19 = load i32*, i32** %17, align 8
  %20 = call i64 @list_length(i32* %19)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %34

22:                                               ; preds = %8
  %23 = load i32*, i32** %10, align 8
  %24 = load i32, i32* %11, align 4
  %25 = load i32, i32* %12, align 4
  %26 = load i32*, i32** %13, align 8
  %27 = call i32* @list_make1(i32* %26)
  %28 = load i32, i32* %14, align 4
  %29 = call i32 @list_make1_oid(i32 %28)
  %30 = load i32*, i32** %16, align 8
  %31 = call i32* @gen_prune_step_op(i32* %23, i32 %24, i32 %25, i32* %27, i32 %29, i32* %30)
  store i32* %31, i32** %18, align 8
  %32 = load i32*, i32** %18, align 8
  %33 = call i32* @list_make1(i32* %32)
  store i32* %33, i32** %9, align 8
  br label %48

34:                                               ; preds = %8
  %35 = load i32*, i32** %10, align 8
  %36 = load i32, i32* %11, align 4
  %37 = load i32, i32* %12, align 4
  %38 = load i32*, i32** %13, align 8
  %39 = load i32, i32* %14, align 4
  %40 = load i32, i32* %15, align 4
  %41 = load i32*, i32** %16, align 8
  %42 = load i32*, i32** %17, align 8
  %43 = load i32*, i32** %17, align 8
  %44 = call i32 @list_head(i32* %43)
  %45 = load i32, i32* @NIL, align 4
  %46 = load i32, i32* @NIL, align 4
  %47 = call i32* @get_steps_using_prefix_recurse(i32* %35, i32 %36, i32 %37, i32* %38, i32 %39, i32 %40, i32* %41, i32* %42, i32 %44, i32 %45, i32 %46)
  store i32* %47, i32** %9, align 8
  br label %48

48:                                               ; preds = %34, %22
  %49 = load i32*, i32** %9, align 8
  ret i32* %49
}

declare dso_local i64 @list_length(i32*) #1

declare dso_local i32* @gen_prune_step_op(i32*, i32, i32, i32*, i32, i32*) #1

declare dso_local i32* @list_make1(i32*) #1

declare dso_local i32 @list_make1_oid(i32) #1

declare dso_local i32* @get_steps_using_prefix_recurse(i32*, i32, i32, i32*, i32, i32, i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @list_head(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
